[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DebugUI.gd" type="Script" id=2]

[node name="DebugUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 163.0
margin_bottom = 136.0
custom_constants/separation = -6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawDebug" type="CheckButton" parent="VBoxContainer"]
margin_right = 189.0
margin_bottom = 40.0
pressed = true
text = "Draw debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawRobotPathDebug" type="CheckButton" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 189.0
margin_bottom = 74.0
pressed = true
text = "Draw robot paths"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawControllerDebug" type="CheckButton" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 189.0
margin_bottom = 108.0
pressed = true
text = "Draw controllers"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="VBoxContainer/DrawDebug" to="." method="_on_DrawDebug_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawRobotPathDebug" to="." method="_on_DrawRobotPathDebug_toggled"]
[connection signal="toggled" from="VBoxContainer/DrawControllerDebug" to="." method="_on_DrawControllerDebug_toggled"]
